# finance-interceptor

./: .gitignore  CLAUDE.md  README.md  justfile  mkdocs.yml  package.json  render.yaml  sonar-project.properties
.claude/: settings.local.json
.claude/agents/: core-backend-secure.md  vision-architect-ux.md
.github/workflows/: ci.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  config.py  errors.py  main.py  models.py  pyproject.toml  pyrightconfig.json
apps/backend/middleware/: __init__.py  auth.py  exceptions.py  rate_limit.py  security_headers.py
apps/backend/models/: __init__.py  analytics.py  auth.py  common.py  enums.py  errors.py  plaid.py  recurring.py  transaction.py  webhook.py  webhook_verification.py
apps/backend/observability/: __init__.py  config.py  constants.py  context.py  logger.py  middleware.py  processors.py
apps/backend/repositories/: __init__.py  account.py  alert.py  analytics_log.py  base.py  cash_flow_metrics.py  category_spending.py  income_source.py  lifestyle_baseline.py  lifestyle_creep_score.py  merchant_spending.py  merchant_stats.py  plaid_item.py  recurring_stream.py  spending_period.py  transaction.py  webhook_event.py
apps/backend/routers/: __init__.py  accounts.py  alerts.py  analytics.py  health.py  plaid.py  recurring.py  transactions.py  webhooks.py
apps/backend/scripts/: start.sh
apps/backend/services/: __init__.py  auth.py  database.py  encryption.py  plaid.py  task_queue.py  transaction_sync.py  webhook.py  webhook_key_cache.py  webhook_verification.py
apps/backend/services/analytics/: __init__.py  baseline_calculator.py  cash_flow_aggregator.py  computation_manager.py  creep_scorer.py  income_detector.py  merchant_stats_aggregator.py  period_calculator.py  seasonality_detector.py  spending_aggregator.py  transfer_detector.py
apps/backend/services/cache/: __init__.py  account_cache.py  analytics_cache.py  auth_cache.py  base.py  invalidation.py  recurring_cache.py
apps/backend/services/recurring/: __init__.py  alert_detection.py  price_sensitivity.py  sync_service.py
apps/backend/tests/: conftest.py  test_analytics.py  test_expected_outcomes.py
apps/backend/workers/: __init__.py  context.py  lifecycle.py  retry.py  settings.py
apps/backend/workers/tasks/: __init__.py  analytics.py  webhook.py
apps/mobile/: .env.example  .eslintrc.js  app.json  eas.json  metro.config.js  package-lock.json  package.json
apps/mobile/app/: +not-found.tsx  _layout.tsx  accounts.tsx  alerts.tsx  modal.tsx  plaid-oauth.tsx  settings.tsx
apps/mobile/app/(auth)/: login.tsx  register.tsx
apps/mobile/app/(tabs)/: _layout.tsx  accounts.tsx  activity.tsx  index.tsx  insights.tsx  recurring.tsx  settings.tsx  transactions.tsx  two.tsx
apps/mobile/app/categories/: [name].tsx
apps/mobile/components/: AccountCard.tsx  EmptyState.tsx  LoadingSpinner.tsx  Themed.tsx  TransactionItem.tsx  index.ts
apps/mobile/config/: index.ts
apps/mobile/contexts/: AuthContext.tsx
apps/mobile/features/: index.ts
apps/mobile/hooks/: index.ts  useAccounts.ts  useAlerts.ts  useAsyncData.ts  useAuth.ts  usePlaidLink.ts  useRecurring.ts  useTransactions.ts
apps/mobile/i18n/: config.ts  index.ts  types.ts  useTranslation.ts
apps/mobile/services/: index.ts
apps/mobile/styles/: colors.ts  common.ts  glass.ts  gradients.ts  index.ts  shadows.ts  spacing.ts  typography.ts
apps/mobile/types/: account.ts  analytics.ts  api.ts  assets.d.ts  auth.ts  index.ts  recurring.ts  transaction.ts
apps/mobile/utils/: accounts.ts  category.ts  formatting.ts  index.ts  merchant.ts  recurring.ts
apps/testing/: pyproject.toml
apps/testing/testing/: __init__.py  cleanup.py  client.py  context.py  context_manager.py
apps/testing/testing/fixtures/: __init__.py
apps/testing/testing/fixtures/atomic/: __init__.py  account.py  alert.py  plaid_item.py  recurring.py  transaction.py  user.py
apps/testing/testing/fixtures/behavioral/: __init__.py  account_setup.py  analytics.py  income.py  spending.py  subscriptions.py  transfers.py
apps/testing/testing/fixtures/bundles/: __init__.py  spending.py  subscriptions.py
apps/testing/testing/fixtures/scenarios/: __init__.py  baseline.py  cash_flow.py  creep.py  expectations.py  result.py  subscriptions.py
apps/testing/testing/generators/: __init__.py  amounts.py  dates.py  ids.py  merchants.py
docs/: COMMANDS.md  ROADMAP.md  SETUP.md  architecture.puml  components.puml  index.md  schema.sql  token-security.puml
docs/migrations/: 004_recurring_streams.sql  005_analytics_engine.sql  006_encryption_upgrade.sql  007_creep_scoring_v2.sql
(+170 files in other folders)
