[project]
name = "finance-interceptor-backend"
version = "0.1.0"
description = "Backend API for Finance Interceptor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "plaid-python>=29.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "certifi>=2024.0.0",
    "supabase>=2.0.0",
    "cryptography>=44.0.0",
    "structlog>=24.0.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]
exclude = [
    ".venv",
    "__pycache__",
    ".git",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "RUF",
]
ignore = [
    "PLR0913",
    "PLR2004",
    "ARG001",
]

[tool.ruff.lint.isort]
known-first-party = ["config", "middleware", "models", "observability", "repositories", "routers", "services", "workers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
mypy_path = "."
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["plaid.*", "supabase.*", "gotrue.*", "structlog.*", "arq.*", "slowapi.*", "limits.*"]
ignore_missing_imports = true
